--- a/app/assets/stylesheets/flags/flags16.css.scss.erb
+++ b/app/assets/stylesheets/flags/flags16.css.scss.erb
@@ -253,5 +253,6 @@
     .za{background-position:0 -3840px;}
     .zm{background-position:0 -3856px;}
     .zw{background-position:0 -3872px;}
+    .xx{background-position:0 -3888px;}
 
 } // .f16
