--- a/app/assets/stylesheets/flags/flags16.css.scss.erb
+++ b/app/assets/stylesheets/flags/flags16.css.scss.erb
@@ -254,5 +254,6 @@
     .zm{background-position:0 -3856px;}
     .zw{background-position:0 -3872px;}
     .xx{background-position:0 -3888px;}
+    .yg{background-position:0 -3904px;}
 
 } // .f16
