--- a/app/assets/stylesheets/flags/flags16.css.erb
+++ b/app/assets/stylesheets/flags/flags16.css.erb
@@ -252,4 +252,4 @@
 .f16 .zm{background-position:0 -3856px;}
 .f16 .zw{background-position:0 -3872px;}
 .f16 .xx{background-position:0 -3888px;}
-.f16 .yg{background-position:0 -3904px;}
+.f16 .yu{background-position:0 -3904px;}
